<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yemyatthein.thoughts.fragments.ViewFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/thought_view_container"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etext_thought_content_view"
                android:text="@string/dummy_thought"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:gravity="top|left"
                android:background="#00000000"
                android:textSize="25dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:id="@+id/text_timestamp_view"
                android:text="@string/dummy_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#848484"
                android:gravity="right"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map_container_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#4C4C55"
            android:padding="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp">
        </RelativeLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageButton
                android:id="@+id/btn_like_icon_view"
                android:src="@mipmap/ic_launcher"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:padding="3dp"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:id="@+id/txt_like_count_view"
                android:text="@string/dummy_like_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

            <ImageButton
                android:id="@+id/btn_dislike_icon_view"
                android:src="@mipmap/ic_launcher"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:padding="3dp"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:id="@+id/txt_dislike_count_view"
                android:text="@string/dummy_dislike_count_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

        </LinearLayout>


        <!-- ********* Comment feature (Start) ********* -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/comment_container"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/lbl_comments_title_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="5dp"/>

            <!-- Dummy comment (To be deleted) -->
            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layout_container_comments_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/comment_component_container"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:background="@drawable/comment_component_container"
                    android:layout_margin="3dp"/>
                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">
                    <TextView
                        android:text="@string/dummy_user"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/dummy_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- ********* Comment feature (End) ********* -->

    </LinearLayout>

</ScrollView>