<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yemyatthein.thoughts.fragments.SearchFormFragment">

    <TextView
        android:text="@string/lbl_find_thoughts_search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <EditText
            android:id="@+id/etext_thought_content_search_form"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edit_text_style"/>

        <Button
            android:id="@+id/btn_search_nearby_search_form"
            android:text="@string/btn_lbl_search_nearby_search_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map_container_search_form"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#4C4C55"
        android:padding="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp">
    </RelativeLayout>

    <Button
        android:id="@+id/btn_leave_thought_search_form"
        android:text="@string/btn_lbl_leave_thought_search_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"/>

</LinearLayout>
